--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
                     </span>
                 </label>
                 <div class="input-wrap">
-                    <input type="checkbox" name="privacy" id="privacy" class="input-check visually-hidden">
+                    <input type="checkbox" name="privacy" id="privacy" class="input-check visually-hidden" required>
                     <label for="privacy" class="check-text">
                         <span>
                             <svg class="check-icon" width="16" height="15">
